# tg-ringer

./: .gitignore  LICENSE  README.md  config.example  pyproject.toml
.github/workflows/: ci.yml
docs/: _config.yml  index.md
tests/: test_smoke.py
tg_caller/: __init__.py  cli.py  client.py
tg_ringer/: __init__.py  cli.py  client.py  mcp.py
