[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tg-caller"
version = "0.1.0"
description = "Ring (call) and message any Telegram user from your own account — urgent alerts via a real Telegram call."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "jdp5949" }]
keywords = ["telegram", "call", "alert", "notification", "userbot", "mtproto", "telethon"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Communications :: Telephony",
    "Topic :: Communications :: Chat",
]
dependencies = ["telethon>=1.36,<2"]

[project.urls]
Homepage = "https://github.com/jdp5949/tg-caller"
Documentation = "https://jdp5949.github.io/tg-caller/"
Repository = "https://github.com/jdp5949/tg-caller"
Issues = "https://github.com/jdp5949/tg-caller/issues"

[project.scripts]
tg-caller = "tg_caller.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["tg_caller"]

[project.optional-dependencies]
dev = ["ruff", "pytest", "build", "twine"]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
